# ArchWiki-RAG-Pipeline

./: .env  .gitignore  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
services/ingestion/: main.py
services/search/: main.py  test_client.py
shared/: search.proto  search_pb2.py  search_pb2_grpc.py
